style: format fix

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -11,7 +11,7 @@
     'is-triggered': isTriggered,
     'is-not-triggered': isNotTriggered,
     'is-selected': isSelected,
-    'is-opening-bubble': isOpeningBubble
+    'is-opening-bubble': isOpeningBubble,
   }"
 >
   <div class="dialogue-turn--content">
