--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-popover/ibf-guide-popover.component.html
@@ -16,7 +16,7 @@
         'ibf-guide-component.video-pdf-description'
           | translate
             : {
-                pdfUrl: pdfUrl
+                pdfUrl: pdfUrl,
               }
       "
     ></p>
@@ -26,7 +26,7 @@
         'ibf-guide-component.whats-new-description'
           | translate
             : {
-                whatsNewUrl: whatsNewUrl
+                whatsNewUrl: whatsNewUrl,
               }
       "
     ></p>
