--- a/interfaces/IBF-dashboard/src/app/components/toggle-trigger-popover/toggle-trigger-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/toggle-trigger-popover/toggle-trigger-popover.component.html
@@ -20,7 +20,7 @@
               : {
                   placeCodeName: area?.name,
                   alertLabel: area?.alertLabel,
-                  disasterSpecificText: getDisasterSpecificText()
+                  disasterSpecificText: getDisasterSpecificText(),
                 }
         "
       >
