feat: use compact numbers in email

--- a/services/API-service/src/api/notification/email/html/styles.ejs
+++ b/services/API-service/src/api/notification/email/html/styles.ejs
@@ -25,6 +25,9 @@
   .body-text-white {
     color: white;
   }
+  .body-text-grey {
+    color: #49515b;
+  }
   .body-text-12px {
     font-size: 12px;
     line-height: 14.4px;
@@ -145,12 +148,5 @@
     border: 0;
     cellspacing: 0;
     cellpadding: 0;
-  }
-  .centered-text {
-    text-align: center;
-  }
-
-  .white-text {
-    color: white;
   }
 </style>
