style: update fiveten-neutral-700 color code

--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_fiveten-neutral-700.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_fiveten-neutral-700.scss
@@ -1,10 +1,10 @@
 :root {
-  --ion-color-fiveten-neutral-700: #4f5763;
-  --ion-color-fiveten-neutral-700-rgb: 79, 87, 99;
+  --ion-color-fiveten-neutral-700: #49515b;
+  --ion-color-fiveten-neutral-700-rgb: 73, 81, 91;
   --ion-color-fiveten-neutral-700-contrast: #ffffff;
   --ion-color-fiveten-neutral-700-contrast-rgb: 255, 255, 255;
-  --ion-color-fiveten-neutral-700-shade: #464d57;
-  --ion-color-fiveten-neutral-700-tint: #616873;
+  --ion-color-fiveten-neutral-700-shade: #404750;
+  --ion-color-fiveten-neutral-700-tint: #5b626b;
 }
 
 .ion-color-fiveten-neutral-700 {
