feat: add disclaimer to indicate approximate numbers

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -139,7 +139,7 @@
             >
               <ion-content>
                 <ion-grid
-                  class="ibf-dashboard-right-column-left-sub-column-grid ion-justify-content-between ion-no-padding"
+                  class="ibf-dashboard-right-column-left-sub-column-grid ion-no-padding"
                 >
                   <ion-row>
                     <ion-col>
@@ -150,6 +150,11 @@
                     </ion-col>
                   </ion-row>
                   <ion-row>
+                    <ion-col>
+                      <app-disclaimer-approximate></app-disclaimer-approximate>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row class="margin-top-auto">
                     <ion-col>
                       <app-areas-of-focus-summary></app-areas-of-focus-summary>
                     </ion-col>
