--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -6,7 +6,7 @@
         style="background: var(--ion-color-ibf-secondary)"
         data-test="action-title"
       >
-        <ion-col class="ion-no-padding">
+        <ion-col class="ion-no-padding" size-lg="11" size-md="11" size-xs="11">
           <ion-item
             lines="none"
             class="component-title-item ion-no-margin"
@@ -32,6 +32,19 @@
                 ></ion-text
               ></ion-label>
             </ion-col>
+          </ion-item>
+        </ion-col>
+        <ion-col size-lg="1" size-md="1" size-xs="1">
+          <ion-item
+            class="aggregate-item-information-icon ion-no-padding"
+            data-test="icon-row"
+            style="--inner-padding-end: 0px"
+            color="transparent"
+            lines="none"
+          >
+            <ion-label>
+              <app-disclaimer-approximate></app-disclaimer-approximate>
+            </ion-label>
           </ion-item>
         </ion-col>
       </ion-row>
