style: format fix

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -62,7 +62,7 @@
         @for (row of activationLogs['rowsData']; track row) {
           <ion-row class="table-row">
             @for (data of row; track data) {
-              <ion-col class="table-cell table-body-cell">
+              <ion-col class="table-body-cell table-cell">
                 <ion-text>{{ data }}</ion-text>
               </ion-col>
             }
