fix: remove country name from header where not appropriate

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -10,7 +10,7 @@
           IBF PORTAL
           @if (isLoggedIn) {
             <strong [ngClass]="{ active: disasterType?.activeTrigger }">
-              {{ countryName }}
+              {{ showCountry ? countryName : '' }}
               {{ disasterType?.disasterType }} {{ activeTriggerMsg }}
             </strong>
           } @else {
