fix: use unique id for for loop

--- a/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-speech-bubble/event-speech-bubble.component.html
@@ -211,7 +211,7 @@
       @for (class of alertClasses; track class.alertClass) {
         <div>
           <ul class="list-inside list-disc text-xs">
-            @for (area of class.areas; track area.name) {
+            @for (area of class.areas; track area.eventPlaceCodeId) {
               <li
                 class="my-1 cursor-pointer hover:underline"
                 (click)="selectArea(area)"
