--- a/interfaces/IBF-dashboard/src/app/components/disclaimer-approximate/disclaimer-approximate.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disclaimer-approximate/disclaimer-approximate.component.html
@@ -1,4 +1,8 @@
-<img src="assets/icons/source-info.svg" id="disclaimer-approximate-trigger" />
+<img
+  class="mx-auto my-0 w-5"
+  src="assets/icons/source-info.svg"
+  id="disclaimer-approximate-trigger"
+/>
 <ion-popover
   side="right"
   trigger="disclaimer-approximate-trigger"
