--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -36,9 +36,8 @@
         </ion-col>
         <ion-col size-lg="1" size-md="1" size-xs="1">
           <ion-item
-            class="aggregate-item-information-icon ion-no-padding"
+            class="aggregate-item-information-icon ion-no-padding m-0 cursor-pointer"
             data-test="icon-row"
-            style="--inner-padding-end: 0px"
             color="transparent"
             lines="none"
           >
@@ -55,12 +54,16 @@
               <ion-item
                 class="aggregate-item ion-no-padding font-size-12"
                 color="ibf-white"
+                lines="full"
               >
                 <ion-thumbnail
                   slot="start"
-                  class="aggregate-item-thumbnail ion-no-margin"
+                  class="m-0 h-10 w-10 bg-slate-100 p-2"
                 >
-                  <ion-img src="assets/icons/{{ indicator.icon }}"></ion-img>
+                  <ion-img
+                    class="object-contain"
+                    src="assets/icons/{{ indicator.icon }}"
+                  ></ion-img>
                 </ion-thumbnail>
                 <ion-label
                   class="aggregate-item-label ion-no-margin ion-text-wrap"
@@ -78,7 +81,7 @@
               >
                 @if (!isAggregateNan(indicator.name, indicator.weightedAvg)) {
                   <ion-label
-                    class="ion-text-right"
+                    class="ion-text-right m-0"
                     data-test="aggregate-number"
                   >
                     {{
@@ -93,7 +96,10 @@
                     {{ indicator.aggregateUnit }}
                   </ion-label>
                 } @else {
-                  <ion-label class="ion-text-right" data-test="aggregate-na">
+                  <ion-label
+                    class="ion-text-right m-0"
+                    data-test="aggregate-na"
+                  >
                     {{ 'aggregates-component.not-applicable' | translate }}
                   </ion-label>
                 }
@@ -106,14 +112,13 @@
               [title]="'aggregates-component.more-information' | translate"
             >
               <ion-item
-                class="aggregate-item-information-icon ion-no-padding"
+                class="aggregate-item-information-icon ion-no-padding m-0 cursor-pointer"
                 data-test="icon-row"
-                style="--inner-padding-end: 0px"
                 color="ibf-white"
               >
                 <ion-label>
                   <img
-                    class="info-img"
+                    class="mx-auto my-0 w-5"
                     src="assets/icons/source-info.svg"
                     (click)="moreInfo(indicator)"
                   />
