fix: process PR comments

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -50,7 +50,7 @@
     </ion-list>
     <ion-list class="ion-no-padding" [class.ion-hide]="!isDev">
       <ion-item
-        href="/status"
+        href="/status-report"
         lines="full"
         rel="noopener noreferrer"
         target="_blank"
