--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/status-report/status-report.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/status-report/status-report.page.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button title="Home">
+      <ion-button title="Home" [routerLink]="['/']">
         <ion-icon name="apps" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -15,23 +15,26 @@
     <h1>IBF status report</h1>
     <h2 id="today"></h2>
     <div id="countries">
-      <div *ngFor="let country of statusData | keyvalue" class="country">
-        <div class="country--name" [id]="'country--' + country.key">
-          {{ country.key }}
+      @for (country of statusData | keyvalue; track country.key) {
+        <div class="country">
+          <div class="country--name" [id]="'country--' + country.key">
+            {{ country.key }}
+          </div>
+          @for (disaster of country.value | keyvalue; track disaster.key) {
+            <div
+              class="disaster"
+              [id]="'country--' + country.key + '--' + disaster.key"
+            >
+              <img class="disaster--logo" [src]="disaster.value.imgSrc" />
+              <span
+                class="disaster--date"
+                [class.danger]="disaster.value.isStale"
+                >{{ disaster.value.date }}</span
+              >
+            </div>
+          }
         </div>
-        <div
-          *ngFor="let disaster of country.value | keyvalue"
-          class="disaster"
-          [id]="'country--' + country.key + '--' + disaster.key"
-        >
-          <img class="disaster--logo" [src]="disaster.value.imgSrc" />
-          <span
-            class="disaster--date"
-            [class.danger]="disaster.value.isStale"
-            >{{ disaster.value.date }}</span
-          >
-        </div>
-      </div>
+      }
     </div>
   </div>
 </ion-content>
