fix: make page title translatable

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/status-report/status-report.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/status-report/status-report.page.html
@@ -12,7 +12,7 @@
 
 <ion-content class="ion-padding-horizontal">
   <div id="report">
-    <h1>IBF status report</h1>
+    <h1>{{ 'status-report-page.page-title' | translate }}</h1>
     <h2 id="today"></h2>
     <div id="countries">
       @for (country of statusData | keyvalue; track country.key) {
