Add test suite and draft of test
Add flodds no-trigger reset flow

Add POM locators, testData & dev country switcher

Change test names & locators selection

Add waitForLoadState

Add component object, testid & assert header function

Add TopBarComponent object & expect assert method

Add ChatComponent POM & assertions fo no-trigger

Add AggregateComponent POM & assertions

Add MapComponent POM & assertions

Add comments and timeout

Move test and add force click

Add additional click

add timeout

test

add angualr attribute and change data test ids

remove redundant waits

Create a base for the test

Fix typos and add breadCrumb is visible function and testIds

Add legend open true or false assertion and data-testid for legend

Add layer-menu test id and assertion for Layers to be hidden by default

--- a/interfaces/IBF-dashboard/src/app/app.component.html
+++ b/interfaces/IBF-dashboard/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   @if (loading) {
-    <div class="loader" data-test="loader">
+    <div class="loader" data-testid="loader">
       <ion-spinner color="light"></ion-spinner>
     </div>
   }
