--- a/interfaces/IBF-dashboard/src/app/components/country-switcher/country-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/country-switcher/country-switcher.component.html
@@ -3,6 +3,7 @@
     <ion-label>Country</ion-label>
     <ion-select
       placeholder="Select Country"
+      data-testid="country-switcher-dropdown"
       interface="popover"
       (ionChange)="handleCountryChange($event)"
       [value]="country ? country.countryCodeISO3 : null"
