--- a/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/disaster-type/disaster-type.component.html
@@ -5,7 +5,7 @@
         (click)="switchDisasterType(disasterType)"
         class="disaster-type-button"
         [ngClass]="disasterType?.activeTrigger ? 'triggered' : ''"
-        data-test="disaster-type-button"
+        [attr.data-testid]="'disaster-type-button-' + disasterType.disasterType"
         [src]="
           getButtonSvg(disasterType.disasterType, disasterType.activeTrigger)
         "
