--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -7,7 +7,10 @@
   <ion-menu-toggle menu="dev-control">
     <ion-header>
       <ion-toolbar>
-        <ion-buttons slot="start">
+        <ion-buttons
+          data-testid="dashboard-dev-control-close-button"
+          slot="start"
+        >
           <ion-icon name="chevron-back-outline"></ion-icon>
         </ion-buttons>
         <ion-title [translate]="'dashboard-page.dev-menu.title'"></ion-title>
@@ -75,7 +78,7 @@
           menu="dev-control"
           [class.ion-hide]="!isDev && !isMultiCountry"
         >
-          <ion-button>
+          <ion-button data-testid="dashboard-dev-control-button">
             <ion-icon name="apps" slot="icon-only"></ion-icon>
           </ion-button>
         </ion-menu-toggle>
