Add TopBarComponent object & expect assert method

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -100,7 +100,7 @@
         >
           <ion-row
             class="component-title ion-justify-content-start ion-align-items-center"
-            data-test="dashboard-title"
+            data-testid="dashboard-top-bar"
           >
             <div style="margin-left: 8px">
               <app-disaster-type></app-disaster-type>
