Add AggregateComponent POM & assertions

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -144,6 +144,7 @@
           </ion-row>
           <ion-row class="component-content">
             <ion-col
+              data-testid="dashboard-aggregate-section"
               sizeXs="12"
               sizeMd="3"
               sizeLg="3"
