Add MapComponent POM & assertions

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -175,7 +175,7 @@
               <app-matrix></app-matrix>
               <ion-content id="ibf-dashboard-map">
                 <app-map-controls></app-map-controls>
-                <app-map></app-map>
+                <app-map data-testid="dashboard-map-componenet"></app-map>
               </ion-content>
             </ion-col>
           </ion-row>
