Add timeline testid and assertions

--- a/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/timeline/timeline.component.html
@@ -19,7 +19,7 @@
           : 'ibf-no-alert-tertiary'
       }}"
       fill="solid"
-      data-test="timeline-button"
+      data-testid="timeline-button"
       [class.active]="timeStepButton.active"
       [class.alert]="
         timeStepButton.thresholdReached && !timeStepButton?.disabled
