Add test and change testids

--- a/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/about-btn/about-btn.component.html
@@ -1,6 +1,6 @@
 <app-ibf-button
   (click)="btnAction()"
-  data-test="chat-about-trigger"
+  data-testid="chat-about-trigger"
   size="small"
   strong="true"
   backgroundColor="ibf-white"
