--- a/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/ibf-guide-button/ibf-guide-button.component.html
@@ -1,5 +1,5 @@
 <app-ibf-button
-  data-test="ibf-guide-button"
+  data-testid="ibf-guide-button"
   (click)="presentPopover()"
   size="small"
   strong="true"
