Add all chat buttons assertions

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -36,6 +36,7 @@
       </ion-row>
       <ion-row>
         <app-activation-log-button
+          data-testid="trigger-log-button"
           style="width: 50%"
         ></app-activation-log-button>
         <app-export-view style="width: 50%"></app-export-view>
