--- a/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/export-view/export-view.component.html
@@ -2,7 +2,7 @@
   [title]="'Export View'"
   [attr.aria-label]="'Export View'"
   (click)="presentPopover()"
-  data-test="export-view-button"
+  data-testid="export-view-button"
   size="small"
   strong="true"
   backgroundColor="ibf-white"
