fix: failing test by using HH:mm as default hour format convention

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -123,7 +123,7 @@
                 }}</strong></ion-text
               >
               <ion-text style="font-size: 12px">{{
-                getTodayDate() | date: 'EEEE, H:mm z'
+                getTodayDate() | date: 'EEEE, HH:mm z'
               }}</ion-text>
             </div>
           </ion-row>
