Add test and assertions for loginPage & UserState components

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -43,7 +43,7 @@
             src="assets/icons/IBF_Impact_Based_Forecast_Logo_32x32.svg"
           ></ion-icon>
           <ion-card-header>
-            <ion-card-title [translate]="'login-page.welcome'">
+            <ion-card-title data-testid="login-welcome-message" [translate]="'login-page.welcome'">
             </ion-card-title>
             <ion-card-subtitle [translate]="'login-page.instruction'">
             </ion-card-subtitle>
