--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -21,12 +21,13 @@
       <ion-list class="ion-no-padding">
         @for (layer of getLayersInOrder(); track layer.name) {
           <ion-row class="ion-justify-content-between ion-nowrap">
-            <ion-item lines="none">
+            <ion-item data-testid="matrix-layer-name" lines="none">
               @if (layer.isLoading) {
                 <ion-spinner></ion-spinner>
               } @else {
                 @if (isCheckBox(layer.group)) {
                   <ion-icon
+                    data-testid="matrix-checkbox"
                     [name]="layer.active ? 'checkbox' : 'square-outline'"
                     (click)="toggleLayer(layer)"
                     class="single-layer-toggler"
