--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -1,12 +1,12 @@
 <div
   id="layer-menu-container"
-  data-testid="layer-menu-container"
   [ngStyle]="{ height: getLayerMenuContainerHeightInRem() + 'rem' }"
 >
   <ion-button
     class="ion-no-margin ion-justify-content-between"
     color="ibf-no-alert-primary "
     id="layer-menu-toggle-button"
+    data-testid="layer-menu-toggle-button"
     (click)="toggleLayerMenu()"
   >
     <div>
@@ -21,7 +21,7 @@
       <ion-list class="ion-no-padding">
         @for (layer of getLayersInOrder(); track layer.name) {
           <ion-row class="ion-justify-content-between ion-nowrap">
-            <ion-item lines="none">
+            <ion-item data-testid="matrix-layer-name" lines="none">
               @if (layer.isLoading) {
                 <ion-spinner></ion-spinner>
               } @else {
