Add test, testIds and parametrize method

--- a/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/matrix/matrix.component.html
@@ -27,6 +27,7 @@
               } @else {
                 @if (isCheckBox(layer.group)) {
                   <ion-icon
+                    data-testid="matrix-checkbox"
                     [name]="layer.active ? 'checkbox' : 'square-outline'"
                     (click)="toggleLayer(layer)"
                     class="single-layer-toggler"
