Add & update testids, add test init assertions

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.html
@@ -37,12 +37,14 @@
         <ion-col size-lg="1" size-md="1" size-xs="1">
           <ion-item
             class="aggregate-item-information-icon ion-no-padding m-0 cursor-pointer"
-            data-testid="aggregates-main-info-icon"
+            data-testid="aggregates-title-info-icon"
             color="transparent"
             lines="none"
           >
             <ion-label>
-              <app-disclaimer-approximate></app-disclaimer-approximate>
+              <app-disclaimer-approximate
+                data-testid="aggregates-disclaimer"
+              ></app-disclaimer-approximate>
             </ion-label>
           </ion-item>
         </ion-col>
